err/django-extensible-profiles.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_extensible_profiles-1.3.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/profiles'...
Listing './lib/python3.5/site-packages/profiles/extensions'...
Listing './lib/python3.5/site-packages/profiles/management'...
Listing './lib/python3.5/site-packages/profiles/management/commands'...
Compiling './lib/python3.5/site-packages/profiles/management/commands/add_user_profile.py'...
***   File "./lib/python3.5/site-packages/profiles/management/commands/add_user_profile.py", line 24
    print "Adding profile for %s" % username
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/profiles/modules'...
Listing './lib/python3.5/site-packages/profiles/modules/addresses'...
Listing './lib/python3.5/site-packages/profiles/modules/addresses/extensions'...
Listing './lib/python3.5/site-packages/profiles/modules/codes'...
Listing './lib/python3.5/site-packages/profiles/modules/codes/extensions'...
Listing './lib/python3.5/site-packages/profiles/modules/codes/templates'...
Listing './lib/python3.5/site-packages/profiles/modules/codes/templates/admin'...
Listing './lib/python3.5/site-packages/profiles/modules/codes/templates/admin/profiles'...
Listing './lib/python3.5/site-packages/profiles/modules/codes/templates/admin/profiles/code'...
Listing './lib/python3.5/site-packages/profiles/modules/notifications'...
Listing './lib/python3.5/site-packages/profiles/modules/notifications/extensions'...
Listing './lib/python3.5/site-packages/profiles/modules/options'...
Listing './lib/python3.5/site-packages/profiles/modules/options/extensions'...
Listing './lib/python3.5/site-packages/profiles/templates'...
Listing './lib/python3.5/site-packages/profiles/templates/profiles'...
Listing './lib/python3.5/site-packages/profiles/templates/registration'...
Listing './lib/python3.5/site-packages/profiles/templatetags'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
